[gd_scene load_steps=7 format=3 uid="uid://dmlawdoa4r5o2"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_mpwbt"]
[ext_resource type="Texture2D" uid="uid://dl2w8nponynj3" path="res://main_menu/backgrounds/titlescreen.png" id="2_cnvru"]
[ext_resource type="PackedScene" uid="uid://dbilrf5tadii0" path="res://main_menu/credits/credits.tscn" id="3_daxlk"]
[ext_resource type="Texture2D" uid="uid://bnygdjh3lvp50" path="res://main_menu/backgrounds/lrie2.png" id="3_x7g6c"]
[ext_resource type="Texture2D" uid="uid://bumbsgbk8a4hr" path="res://main_menu/backgrounds/lrielogo.png" id="4_5djqb"]
[ext_resource type="AudioStream" uid="uid://caqdrqdqen44g" path="res://vn/music/ch3/city-traffic-outdoor-6414.mp3" id="5_1r27b"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mpwbt")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.313726)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cnvru")

[node name="Options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0

[node name="TextureRect2" type="TextureRect" parent="Options"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 5.0
offset_right = 724.0
offset_bottom = 602.0
grow_vertical = 2
texture = ExtResource("3_x7g6c")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Options"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 516.0
offset_top = 188.0
offset_right = 1186.0
offset_bottom = 456.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("4_5djqb")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 552.0
offset_top = 430.0
offset_right = 1091.0
offset_bottom = 471.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.13263, 1.0869)

[node name="Play" type="Button" parent="Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play"

[node name="Credits" type="Button" parent="Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Credits"

[node name="Quit" type="Button" parent="Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_1r27b")
autoplay = true

[node name="Credits" parent="." instance=ExtResource("3_daxlk")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -21.0
offset_right = 1.0
offset_bottom = -21.0

[node name="Button" type="Button" parent="Credits"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 450.0
offset_top = 324.0
offset_right = 639.0
offset_bottom = 376.0
grow_horizontal = 0
grow_vertical = 0
text = "Main Menu"

[connection signal="pressed" from="Options/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Credits/Button" to="." method="_on_button_pressed"]
